# HelixForge

./: .gitignore  CMakeLists.txt  README.md
data/: sampleA.fasta  sampleB.fasta
database/dna/: sampleB.fasta
include/: AlignmentEngine.hpp  AlignmentWorkflow.hpp  FastaReader.hpp  Genome.hpp  KmerIndex.hpp  SequenceUtils.hpp
src/: AlignmentEngine.cpp  AlignmentWorkflow.cpp  FastaReader.cpp  Genome.cpp  KmerIndex.cpp  SequenceUtils.cpp  main.cpp
